Property Management System/force-app/main/default/objects/Service_Interruption__c/Service_Interruption__c.object-meta.xml
<CustomObject>
    <label>Service Interruption</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Service Interruption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Interruptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>