Property Management System/force-app/main/default/objects/Service_Interruption__c/fields/Interruption_Reason__c.field-meta.xml
<CustomField>
    <fullName>Interruption_Reason__c</fullName>
    <label>Interruption Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Water Leakage</fullName>
            </value>
            <value>
                <fullName>Electricity Fitting</fullName>
            </value>
            <value>
                <fullName>Renovation</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Wiring</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>