Property Management System/force-app/main/default/objects/Service_Interruption__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Service Interruptions</relationshipLabel>
    <relationshipName>Service_Interruptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>